2005-08-03 Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Check for fstat.

	Reported by:  Ito Kazumitsu  <kaz@maczuka.gcd.org>

2005-08-03 Dalibor Topic  <robilad@kaffe.org>

	* test/regression/BufferedInputStreamAvailableTest.java:
	Use file TestScript for testing input, as it exists in
	both builddir and srcdir, so if these are different, the 
	test still passes.

2005-08-03  Guilhem Lavaux <guilhem@kaffe.org>

	* config/powerpc/trampolines.S: Changed commentary type for
	gcc.

	Reported by: Riccardo Mottola <multix@gmail.com>.

2005-08-02 Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* test/regression/BufferedInputStreamAvailableTest.java:
	Weakened the criterion.

2005-08-02 Dalibor Topic  <robilad@kaffe.org>

	* include/jsyscall.h:
	(KOPEN, KLSEEK, KCLOSE, KFSTAT) Documented.

	* libraries/clib/target/Linux/target_native_file.h
	(TARGET_NATIVE_FILE_OPEN, TARGET_NATIVE_FILE_CLOSE,
	TARGET_NATIVE_FILE_AVAILABLE, TARGET_NATIVE_FILE_SIZE,
	TARGET_NATIVE_FILE_TELL): New macros used to delegate
	system calls to thread-safe wrappers for system calls.

	Reported by:  Guilhem Lavaux <guilhem@kaffe.org>

2005-08-01  Guilhem Lavaux <guilhem@kaffe.org>

	* test/jni/Makefile.am: Fixed typo.

	* test/jni/Makefile.in: Regenerated.

	* test/jni/jniWeakTest.c
	(main): Register preloaded symbols.

2005-08-01  Guilhem Lavaux <guilhem@kaffe.org>

	* test/internal/VirtualMethod.java: New test.

	* test/internal/Makefile.am: Added the test.

	* test/internal/Makefile.in: Regenerated.

2005-07-31  Guilhem Lavaux <guilhem@kaffe.org>
	Riccardo Mottola  <multix@gmail.com>

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c
	(finaliserJob): Protect the access to the block structure
	as the heap may grow at the same time.
	
2005-07-31 Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* test/regression/BufferedInputStreamAvailableTest.java:
	New file.

	* test/regression/Makefile.am:
	Added BufferedInputStreamAvailableTest.java.

	* test/regression/Makefile.in: regenerated.
